// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Center> Structure renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`<Center> Structure renders correctly if style props is set 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {
        "color": "red",
      },
    ]
  }
/>
`;
